--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,4 +37,5 @@ jobs:
     steps:
       - name: Output information
         run: |        
-          echo "MONGODB_DB_NAME: $"MONGODB_DB_NAME
+          echo "MONGODB_DB_NAME: $MONGODB_DB_NAME"
+          echo "MONGODB_USERNAME: ${{ env.MONGODB_USERNAME }}"
